--- a/about.html
+++ b/about.html
@@ -5,88 +5,50 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Обо мне — Анастасия</title>
 <meta name="description" content="Обо мне: портрет, путь, выставки и NFT-альбом.">
-<!-- Заголовки/меню остаются Inter; текст — Manrope -->
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800;900&family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800;900&family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet">
 <style>
   :root{
     --bg:#000; --text:#e9eaec; --muted:#9da0a6; --edge:#171717;
     --max:1300px; --radius:14px;
-    --gap:72px;          /* базовый зазор между колонками */
-    --gapPlus:108px;     /* +50% правее для текста */
-    --titleSpace:22px;   /* текущий отступ под заголовком */
+    --grid-gap:72px;              /* расстояние между колонками */
+    --title-space:22px;           /* базовый отступ под h2 */
   }
   *{box-sizing:border-box}
   html{scroll-behavior:smooth}
   body{margin:0; background:var(--bg); color:var(--text); font-family:Inter, system-ui, -apple-system, Arial, sans-serif}
 
-  /* типографика */
-  h2{font-weight:800; letter-spacing:-.01em; font-size:clamp(22px,3.2vw,36px); margin:0 0 var(--titleSpace)}
-  .bodytext{ font-family: Manrope, Inter, system-ui, -apple-system, Arial, sans-serif; }
+  /* Заголовки — Inter; основной текст — Raleway */
+  h2{font-weight:800; letter-spacing:-.01em; font-size:clamp(22px,3.2vw,36px); margin:0 0 calc(var(--title-space)*2)}
+  .bodytext{ font-family: Raleway, Inter, system-ui, -apple-system, Arial, sans-serif; }
   .bodytext p, .bodytext li{ color:#d8dbe1; line-height:1.6; }
-  .bodytext p + p{ margin-top:14px; } /* абзацы разнесены */
+  .bodytext p + p{ margin-top:14px; }
 
-  /* мини-меню (всегда) — слева снизу */
-  .minimenu{
-    position:fixed; left:14px; bottom:14px; z-index:30; display:flex; flex-direction:column; gap:6px;
+  /* мини-меню и RU/ENG */
+  .minimenu{ position:fixed; left:14px; bottom:14px; z-index:30; display:flex; flex-direction:column; gap:6px;
     font-size:12px; letter-spacing:.08em; background:rgba(0,0,0,.5); backdrop-filter:blur(6px);
-    padding:8px 10px; border-radius:10px; border:1px solid #111;
-  }
+    padding:8px 10px; border-radius:10px; border:1px solid #111; }
   .minimenu a{ color:#cfcfd4; text-decoration:none }
-
-  /* переключатель RU/ENG — справа снизу, стиль как у мини-меню */
-  .langswitch{
-    position:fixed; right:14px; bottom:14px; z-index:30; display:flex; gap:10px;
+  .langswitch{ position:fixed; right:14px; bottom:14px; z-index:30; display:flex; gap:10px;
     font-size:12px; letter-spacing:.08em; background:rgba(0,0,0,.5); backdrop-filter:blur(6px);
-    padding:8px 10px; border-radius:10px; border:1px solid #111;
-  }
-  .langswitch button{
-    appearance:none; background:transparent; border:none; color:#cfcfd4; cursor:pointer; padding:0 2px; font:inherit;
-    opacity:.8;
-  }
-  .langswitch button.active{ opacity:1; color:#ffffff; text-decoration:underline; text-underline-offset:3px }
+    padding:8px 10px; border-radius:10px; border:1px solid #111; }
+  .langswitch button{ appearance:none; background:transparent; border:none; color:#cfcfd4; cursor:pointer; padding:0 2px; font:inherit; opacity:.8; text-transform:uppercase }
+  .langswitch button.active{ opacity:1; color:#fff; text-decoration:underline; text-underline-offset:3px }
 
-  /* контейнер — чуть правее + воздух */
-  .wrap{
-    /* левый паддинг больше, чтобы контент казался сдвинутым вправо */
-    padding:64px 48px 110px 72px;
-    max-width:var(--max); margin:0 auto;
+  /* контейнер: по твоим красным направляющим — 2 ровные колонки 50/50 */
+  .wrap{ padding:64px 48px 110px 72px; max-width:var(--max); margin:0 auto; }
+  .row, .row-bottom{
+    display:grid; grid-template-columns:1fr 1fr; column-gap:var(--grid-gap); align-items:start;
   }
 
-  /* Ряд 1: слева фото, справа текст
-     — текст дополнительно отодвигаем вправо на + половину текущего зазора */
-  .row{
-    display:grid;
-    grid-template-columns: 5fr 7fr;
-    column-gap:var(--gap);
-    align-items:start;
-  }
-  .row .right-col{ padding-left:calc(var(--gapPlus) - var(--gap)); } /* +50% отступа вправо относительно базового зазора */
+  /* левый блок = фото 3:4, правый = текст; одинаковый отступ сверху */
   .photo{
     width:100%; aspect-ratio:3/4; object-fit:cover;
     background:#0b0b0b; border:1px solid var(--edge); border-radius:12px;
   }
-
-  /* Увеличиваем вертикальный отступ под заголовками на величину текущего */
-  .right-col h2 + *{ margin-top:calc(var(--titleSpace) + var(--titleSpace)); }
-
   .right-col p, .right-col ul{ max-width:62ch }
 
-  /* Ряд 2: слева превью-стопка (ровно выровнена и того же размера по ширине, что и фото),
-           справа короткий текст; такие же зазоры */
-  .row-bottom{
-    margin-top:64px;
-    display:grid;
-    grid-template-columns: 5fr 7fr;
-    column-gap:var(--gap);
-    align-items:start;
-  }
-  .row-bottom .right-col{ padding-left:calc(var(--gapPlus) - var(--gap)); }
-  /* контейнер превью: занимаем всю ширину левой колонки и держим соотношение 3:4,
-     чтобы визуально совпадать с фото выше */
-  .stack{
-    position:relative; width:100%; aspect-ratio:3/4; /* тот же ratio, что и фото */
-    max-width:none;   /* равна ширине колонки */
-  }
+  /* нижний ряд: слева «стопка» превью — выровнена по тем же границам и по ширине равна фото */
+  .stack{ position:relative; width:100%; aspect-ratio:3/4; }
   .card{
     position:absolute; top:0; left:0; width:78%; aspect-ratio:4/3;
     border:1px solid var(--edge); border-radius:12px; overflow:hidden; background:#0b0b0b;
@@ -97,17 +59,13 @@
   .card:nth-child(2){ transform:rotate(2deg)  translate(14px, 14px); z-index:2}
   .card:nth-child(3){ transform:rotate(8deg)  translate(32px, 24px); z-index:3}
   .stack:hover .card img{ transform:scale(1.04) }
-  .stack-note{position:absolute; bottom:-22px; left:0; font-size:12px; color:#9aa0a6}
+  .stack-note{ margin-top:10px; font-size:12px; color:#9aa0a6 }
 
   @media (max-width:980px){
     .wrap{ padding:32px 18px 90px 18px }
-    .row{ grid-template-columns:1fr; column-gap:0 }
-    .row .right-col{ padding-left:0 }
-    .row-bottom{ grid-template-columns:1fr; column-gap:0; gap:22px }
-    .row-bottom .right-col{ padding-left:0 }
-    .stack{ position:static; width:100%; aspect-ratio:auto; }
-    .card{ position:relative; width:100%; transform:none; aspect-ratio:4/3; }
-    .stack-note{ position:static; margin-top:6px }
+    .row, .row-bottom{ grid-template-columns:1fr; column-gap:0 }
+    .stack{ position:static; width:100%; aspect-ratio:auto }
+    .card{ position:relative; width:100%; transform:none; aspect-ratio:4/3 }
   }
 
   /* Лайтбокс */
@@ -115,11 +73,10 @@
   .lightbox.open{ display:grid }
   .lb-inner{ position:relative; width:min(92vw,1200px) }
   .lb-img{ width:100%; background:#111; border:1px solid #1a1a1a; border-radius:14px; object-fit:contain; cursor:pointer }
-  .lb-title{ margin-top:10px; text-align:center; font-weight:800; letter-spacing:.005em } /* заголовок (Inter) */
-  .lb-meta{ text-align:center; color:#cfd1d6; font-size:14px }
-  .lb-desc{ display:none; margin-top:8px; text-align:center; font-family: Manrope, Inter, system-ui, -apple-system, Arial, sans-serif; color:#d8dbe1; line-height:1.55 }
+  .lb-title{ margin-top:10px; text-align:center; font-weight:800; letter-spacing:.005em }     /* Inter */
+  .lb-meta{ text-align:center; color:#cfd1d6; font-size:14px }                               /* Inter */
+  .lb-desc{ display:none; margin-top:8px; text-align:center; font-family: Raleway, Inter, system-ui, -apple-system, Arial, sans-serif; color:#d8dbe1; line-height:1.55 }
   .lb-desc.show{ display:block }
-
   .lb-prev,.lb-next,.lb-close{
     position:absolute; top:50%; transform:translateY(-50%);
     background:rgba(0,0,0,.4); color:#fff; border:1px solid #2a2a2a;
@@ -135,7 +92,7 @@
 <body>
 
 <main class="wrap">
-  <!-- Ряд 1: слева фото, справа текст -->
+  <!-- верхняя строка -->
   <section class="row">
     <img class="photo" src="portrait.jpg" alt="Портрет Анастасии">
     <div class="right-col bodytext">
@@ -151,36 +108,33 @@
     </div>
   </section>
 
-  <!-- Ряд 2: слева превью-«стопка», справа короткий блок -->
-  <section class="row-bottom">
+  <!-- нижняя строка -->
+  <section class="row-bottom" style="margin-top:64px">
     <div>
       <div class="stack" id="stack">
         <div class="card" data-idx="0"><img src="nft1.jpg" alt="Превью 1"></div>
         <div class="card" data-idx="1"><img src="nft2.jpg" alt="Превью 2"></div>
         <div class="card" data-idx="2"><img src="nft3.jpg" alt="Превью 3"></div>
       </div>
-      <div class="stack-note">Нажмите, чтобы открыть альбом (8 фото)</div>
+      <div class="stack-note">Наведи, чтобы открыть альбом (8 фото)</div>
     </div>
 
     <div class="right-col bodytext">
       <h2>Выставки и NFT</h2>
       <ul>
         <li><strong>2022–2023:</strong> первые AI-серии, NFT-релизы</li>
-        <li><strong>2023–2024:</strong> показы: Москва, Дубай, Нью-Йорк, Япония, Испания, Индонезия</li>
+        <li><strong>2023–2024:</strong> Москва, Дубай, Нью-Йорк, Япония, Испания, Индонезия</li>
         <li><strong>2024–2025:</strong> fashion-визуалы, 3D-аватары, клипы</li>
       </ul>
     </div>
   </section>
 </main>
 
-<!-- мини-меню слева снизу -->
 <nav class="minimenu" aria-label="Мини-меню">
   <a href="about.html">обо мне</a>
   <a href="contact.html">контакты</a>
   <a href="index.html">главная</a>
 </nav>
-
-<!-- переключатель языка справа снизу -->
 <div class="langswitch" aria-label="Выбор языка">
   <button type="button" data-lang="ru" class="active">RU</button>/<button type="button" data-lang="en">ENG</button>
 </div>
@@ -208,7 +162,7 @@
 <script>
   document.getElementById('year').textContent = new Date().getFullYear();
 
-  /* ===== Альбом: по клику ОТКРЫВАЕТСЯ; по крестику/фону/Esc ЗАКРЫВАЕТСЯ ===== */
+  // Данные альбома (название — город — год + описание)
   const gallery = [
     {src:'nft1.jpg', title:'Серия «Хром»,', city:'Дубай', year:'2023', desc:'Исследование отражающих поверхностей и неонового света в контексте урбан-мифологии.'},
     {src:'nft2.jpg', title:'«Ветер внутри»,', city:'Токио', year:'2024', desc:'Гибридные портреты: смешение AI-рендеров и ручной пост-обработки.'},
@@ -236,57 +190,47 @@
     const g = gallery[gi];
     lbImg.src = g.src;
     lbTitle.textContent = `${g.title} ${g.city} — ${g.year}`;
-    lbMeta.textContent  = ''; // для доп.метаданных при желании
+    lbMeta.textContent  = '';
     lbDesc.textContent  = g.desc || '';
     lbDesc.classList.remove('show');
   }
   function openLB(i=0){ gi = i; renderLB(); lb.classList.add('open'); }
   function closeLB(){ lb.classList.remove('open'); }
-
   function prevLB(e){ gi=(gi-1+gallery.length)%gallery.length; renderLB(); if(e) e.stopPropagation(); }
   function nextLB(e){ gi=(gi+1)%gallery.length; renderLB(); if(e) e.stopPropagation(); }
 
-  // Открытие — клик по ЛЮБОЙ точке «stack» или карточке
+  // Открытие: по наведению (desktop), по клику (touch)
+  const prefersHover = window.matchMedia('(hover:hover) and (pointer:fine)').matches;
+  let hoverTimer=null;
+  if (prefersHover) {
+    stack.addEventListener('mouseenter', (e)=>{
+      const t = e.target.closest('.card'); const idx = Number(t?.dataset.idx || 0);
+      hoverTimer = setTimeout(()=> openLB(idx), 120);
+    }, true);
+    stack.addEventListener('mouseleave', ()=>{ clearTimeout(hoverTimer); hoverTimer=null; closeLB(); }, true);
+  }
+  // Fallback: клик
   stack.addEventListener('click', (e)=>{
-    const card = e.target.closest('.card');
-    const idx  = Number(card?.dataset.idx ?? 0);
+    if (prefersHover) return; // на десктопе уже работает hover
+    const t = e.target.closest('.card'); const idx = Number(t?.dataset.idx || 0);
     openLB(idx);
   });
 
-  // Показ/скрытие описания — клик по большому изображению
+  // Показ описания — клик по большому изображению
   lbImg.addEventListener('click', ()=> lbDesc.classList.toggle('show'));
 
-  // Управление
   lbPrev.addEventListener('click', prevLB);
   lbNext.addEventListener('click', nextLB);
   lbClose.addEventListener('click', (e)=>{ e.stopPropagation(); closeLB(); });
-  // клик по фону (за пределами .lb-inner)
   lb.addEventListener('click', (e)=>{ if(e.target === lb) closeLB(); });
   lb.addEventListener('dblclick', closeLB);
   document.addEventListener('keydown', (e)=>{ if(lb.classList.contains('open') && e.key==='Escape') closeLB(); });
   lbInner.addEventListener('click', (e)=> e.stopPropagation());
 
-  // Плейсхолдеры, если превью отсутствуют
-  document.querySelectorAll('.card img').forEach(img=>{
-    img.addEventListener('error', ()=>{
-      const d = document.createElement('div');
-      d.style.display='grid'; d.style.placeItems='center';
-      d.style.width='100%'; d.style.height='100%';
-      d.style.background='linear-gradient(180deg,#0a0a0a,#111)';
-      d.style.color='#777'; d.style.fontSize='12px';
-      d.textContent = 'Добавьте '+img.getAttribute('src');
-      img.replaceWith(d);
-    }, {once:true});
-  });
-
-  /* ===== Переключатель RU/ENG (UI + запоминание) ===== */
+  // RU/ENG UI
   const btns = document.querySelectorAll('.langswitch [data-lang]');
   const saveLang = (l)=> localStorage.setItem('lang', l);
-  const applyLang = (l)=>{
-    btns.forEach(b=> b.classList.toggle('active', b.dataset.lang===l));
-    document.documentElement.setAttribute('lang', l);
-    // Когда будет английский текст — здесь подставим перевод
-  };
+  const applyLang = (l)=>{ btns.forEach(b=> b.classList.toggle('active', b.dataset.lang===l)); document.documentElement.setAttribute('lang', l); };
   btns.forEach(b=> b.addEventListener('click', ()=>{ saveLang(b.dataset.lang); applyLang(b.dataset.lang); }));
   applyLang(localStorage.getItem('lang') || 'ru');
 </script>
